# openmodel

./: .env.example  .gitignore  README.md  docker-compose.yml
config/: sidecar-8gpu-multi.yaml  sidecar-8gpu-tensor.yaml  sidecar-foc-fs3.yaml  sidecar-foc.yaml  sidecar-prod-test.yaml
release/: README.md  SHA256SUMS.txt
src/: Makefile  docker-compose.yml
src/foc-bridge/: Dockerfile  download.test.js  package-lock.json  package.json  server.js  server.test.js  upload.js
src/go-scheduler/: Dockerfile  entrypoint.sh  go.mod  go.sum
src/go-scheduler/cmd/scheduler/: main.go  main_test.go
src/go-scheduler/internal/config/: config.go  (+2 more)
src/proto/: sidecar.proto
src/py-inference/: Dockerfile  entrypoint.sh  pyproject.toml  requirements-docker.txt  requirements.txt
src/py-inference/src/: config.py  main.py
src/py-inference/src/inference/: api_server.py  engine.py  engine_pool.py  receipt.py
src/py-inference/src/model/: foc_client.py  foc_mock.py  foc_real.py  local_loader.py  manager.py
src/py-inference/src/scheduler_client/: grpc_client.py  listener.py  sidecar_pb2.py  sidecar_pb2.pyi  sidecar_pb2_grpc.py
src/py-inference/tests/: conftest.py  test_api_auth.py  test_api_server.py  test_config.py  test_engine_dead_and_pid_isolation.py  test_engine_pool.py  test_engine_state.py  test_engine_switch.py  test_foc_real.py  test_listener_extra.py  test_listener_resume.py  test_listener_retry.py  test_model_layer.py  test_pool_preemption.py  test_request_validation.py  test_status_report.py  test_urgency_mapping.py  test_vram_release.py
src/scripts/: gen-proto.sh
(+28 files in other folders)
